layout/style/forms.css
/* ... */
input[type=range]::-moz-range-thumb {
  


  -moz-appearance: range-thumb !important;
  
  display: inline-block !important;
  float: none !important;
  position: static !important;
  width: 1em;
  height: 1em;
  border: 0.1em solid grey;
  border-radius: 0.5em;
  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><linearGradient id='g' x2='0' y2='100%'><stop stop-color='%23ddd'/><stop offset='100%' stop-color='white'/></linearGradient><rect fill='url(%23g)' width='100%' height='100%'/></svg>");
  
  -moz-user-select: none ! important;
}

input[type="number"] {
  
  -moz-binding: none;
  width: 149px; 
}

input[type=number]::-moz-number-wrapper {
  
  display: flex;
  float: none !important;
  position: static !important;
  -moz-box-sizing: border-box;
  width: 100%;
  height: 100%;
}

input[type=number]::-moz-number-text {
  -moz-appearance: none;
  
  -moz-user-modify: read-write;
  flex: 1;
  padding: 0;
  border: 0;
  margin: 0;
}

input[type=number]::-moz-number-spin-box {
  display: flex;
  flex-direction: column;
  flex: 0 8px;
  cursor: default;
  padding: 1px;
}

input[type=number]::-moz-number-spin-up {
  



  display: block;
  flex: 1;
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="5"><path d="M1,4 L3,0 5,4" fill="dimgrey"/></svg>');
  background-repeat: no-repeat;
  background-position: center bottom;
  border: 1px solid darkgray;
  border-bottom: none;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

input[type=number]::-moz-number-spin-down {
  



  display: block;
  flex: 1;
  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="5"><path d="M1,1 L3,5 5,1" fill="dimgrey"/></svg>');
  background-repeat: no-repeat;
  background-position: center top;
  border: 1px solid darkgray;
  border-top: none;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

input[type="number"] > div > div > div:hover {
  
  background-color: lightblue;
}

%ifdef XP_OS2
input {
  font: medium serif; font-family: inherit
}

select {
  font: medium serif; font-family: inherit
}

optgroup {
  font: medium serif; font-family: inherit
}

input[type="reset"],
input[type="button"],
input[type="submit"] { 
  font: medium serif; font-family: inherit
}

%endif

