Bug 935544 - Inherit 'text-align' through <input type=number>'s anonymous content. r=dholbert
UltraBlame original commit: b6209340060858370d885b6057b6c70cd6a765ae

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -901,6 +901,13 @@ input[type=number]::-moz-number-text {
   -moz-appearance: none;
   
   -moz-user-modify: read-write;
+  
+
+
+
+
+
+  text-align: inherit;
   flex: 1;
   padding: 0;
   border: 0;
